tests/operator/add_bool_null.rev
true + null // error: uninitialized variable